Fixes issues with filter bar overlapping other elements #2359 and fixes preview dropdown issues for PR #2634

--- a/app/assets/stylesheets/pano/app/_filter_bar.sass
+++ b/app/assets/stylesheets/pano/app/_filter_bar.sass
@@ -22,7 +22,7 @@
     border-bottom-left-radius: 3px
     border-bottom-right-radius: 3px
     font-size: 12px
-    z-index: 210
+    z-index: 198
     box-shadow: 0 1px 1px rgba(0,0,0,0.1)
     +clearfix
 
